fix(event card): fix spacings and image aspect ratio browser compatibility

--- a/packages/themes/src/bootstrap/artbasel/scss/cards/_event_card.scss
+++ b/packages/themes/src/bootstrap/artbasel/scss/cards/_event_card.scss
@@ -86,8 +86,10 @@
   .tags {
     margin: $spacing-8 0 $spacing-3;
     display: flex;
+    flex-wrap: wrap;
+
     & > div {
-      margin-right: $spacing-3;
+      margin: 0 $spacing-3 $spacing-3 0;
     }
   }
 
@@ -164,6 +166,10 @@
 
         .title {
           margin-bottom: $spacing-3;
+
+          & + .items {
+            margin-top: $spacing-7;
+          }
         }
 
         .card-description {
